# rpgmpacker

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .prettierrc  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  codecov.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yaml  Release.yaml  cmake.yml  release.yml
RPGMPacker/: CMakeLists.txt
RPGMPacker/src/: main.cpp
RPGMPackerLib/: CMakeLists.txt
RPGMPackerLib/include/: foldertype.hpp  formatters.hpp  inputPaths.hpp  loggers.h  operation.hpp  parseData.hpp  utility.hpp
RPGMPackerLib/src/: parseData.cpp  utility.cpp
RPGMPackerTests/: CMakeLists.txt
RPGMPackerTests/files/MV/data/: Actors.json  Animations.json  CommonEvents.json  Enemies.json  Items.json  Map001.json  Skills.json  System.json  Tilesets.json  Troops.json  Weapons.json
RPGMPackerTests/files/MZ/data/: Actors.json  Animations.json  CommonEvents.json  Enemies.json  Items.json  Map001.json  Skills.json  System.json  Tilesets.json  Troops.json  Weapons.json
RPGMPackerTests/include/: testingUtils.h
RPGMPackerTests/src/: hash.cpp  main.cpp  parsing.cpp  testingUtils.cpp
cmake/: CPM.cmake  Packages.cmake  Tools.cmake
include/: inputPaths.hpp  md5.h  parseData.hpp  platform.hpp  utility.hpp
src/: encryption.ts  excludeUtils.ts  fileOperations.ts  filtering.ts  formatters.hpp  index.ts  inputPaths.cpp  ioTypes.ts  ioUtils.ts  javascriptDoesNotHaveAFuckingStack.ts  logging.ts  main.cpp  md5.cpp  operation.hpp  options.ts  parseData.cpp  parsedData.ts  paths.ts  platform.hpp  pluginUtils.ts  rpgmakerTypes.ts  rpgmakerUtils.ts  rpgmakerVersion.hpp  utility.cpp  utility.hpp
src/io/: BinaryReader.ts  BinaryReaderWriter.ts  BinaryWriter.ts  Path.ts  ioUtils.ts
src/other/: Stack.ts
src/rpgmaker/: pathRegistries.ts
src/rpgmakerTypes/: ProjectPathRegistry.ts  RPGMakerPlatform.ts  RPGMakerVersion.ts  TemplateFolderName.ts  TemplatePathRegistry.ts
test/: encryption.tests.ts  ioTypes.tests.ts  ioUtils.tests.ts  options.tests.ts  rpgmakerUtils.tests.ts  testutils.ts
test/io/: BinaryReaderWriter.tests.ts  Path.tests.ts  ioUtils.tests.ts
test/other/: Stack.tests.ts
test/rpgmakerTypes/: RPGMakerVersion.tests.ts  TemplateFolderName.tests.ts
